--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^7.1.0",
     "@nestjs/terminus": "^10.0.1",
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
